--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "with-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.3",
+    "axios": "^0.20.0",
     "bootstrap-daterangepicker": "^3.1.0",
     "devextreme": "20.1.7",
     "devextreme-react": "20.1.7",
