--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.3",
